# MioLink

./: .gitignore  .gitmodules  README.md  _config.yml
.github/workflows/: cmake-single-platform.yml  pre-release.yml  release.yml
docs/: Gemfile  README.md  _config.yml
docs/_includes/: header.html
docs/_layouts/: home.html
firmware/: CMakeLists.txt  CmakeLists.txt  git_thirdParty_version.h.in  git_version.h.in  memmap_debug.ld  memmap_release.ld  pico_sdk_import.cmake
firmware/include/: tusb_config.h
firmware/include/bmp/: FreeRTOSConfig.h  device_i2c.h  multiplexer_task.h  platform.h  platform_swdtap.h  platform_timing.h  rp_dma.h  rp_uart.h  swo.h  tap_pio.h  tap_pio_common.h  timing_rp2040.h  traceswo.h  tusb_config.h  usb.h  usb_cdc.h  usb_serial.h  version.h
firmware/source/: main.c
firmware/source/SysView/: SEGGER_SYSVIEW.c  SEGGER_SYSVIEW_Conf.h  SEGGER_SYSVIEW_ConfDefaults.h  SEGGER_SYSVIEW_Config_FreeRTOS.c  SEGGER_SYSVIEW_FreeRTOS.h
firmware/source/bmp/: adiv5_swd.c  aux_serial.c  crc32.c  device_i2c.c  gdb_if.c  jtagtap.c  miolink_pico_swd.pio  miolink_pico_target_swd.pio  miolink_revA_target_swd.pio  miolink_revB_target_swd.pio  miolink_rev_a_swd.pio  miolink_rev_b_swd.pio  multiplexer_task.c  pico_swd.pio  pico_target_swd.pio  platform.c  platform_boards.c  platform_commands.c  platform_timing.c  platform_vtref.c  rtt_if.c  serialno.c  swdptap.c  tap_pio.c  tap_pio_common.c  target_jtag.pio  target_swd.pio  timing_rp2040.c  traceswo_manchester.pio  traceswoasync.c  traceswodecode.c  usb.c  usb_serial.c
firmware/source/bmp/pio/: pio_jtag.pio  pio_swd_miolink_pico.pio  pio_swd_miolink_rev_b.pio  pio_traceswo_manchester.pio
hardware/MioLink_Pico/revA/: MioLink_Pico.kicad_dru  MioLink_Pico.kicad_pcb  MioLink_Pico.kicad_pro  MioLink_Pico.kicad_sch
hardware/MioLink_Pico/revA/jlcpcb/: project.db
hardware/MioLink_Pico/revA/jlcpcb/production_files/: BOM-MioLink_Pico.csv  CPL-MioLink_Pico.csv
hardware/MioLink_adapter/revA/: MioLink_adapter.kicad_pcb  MioLink_adapter.kicad_pro  MioLink_adapter.kicad_sch
hardware/MioLink_adapter/revA/jlcpcb/: project.db
hardware/MioLink_adapter/revA/jlcpcb/production_files/: BOM-MioLink_adapter.csv  CPL-MioLink_adapter.csv
hardware/revA/: MioLink.kicad_pcb  MioLink.kicad_pro  MioLink.kicad_sch
hardware/revA/jlcpcb/production_files/: BOM-MioLink.csv  CPL-MioLink.csv
hardware/revB/: MioLink.kicad_pcb  MioLink.kicad_pro  MioLink.kicad_sch
hardware/revB/jlcpcb/: project.db
hardware/revB/jlcpcb/production_files/: BOM-MioLink.csv  CPL-MioLink.csv
